<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_create_new_event"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:paddingBottom="16dp">

    <TextView
        android:id="@+id/tvCreateNewEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#10283B"
        android:text="Create a new event"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:gravity="center"
        android:paddingTop="16dp"
        android:paddingBottom="16dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="3">
        <ImageView
            android:id="@+id/ivEventPoster"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_launcher_background" />
    </FrameLayout>

    <EditText
        android:id="@+id/eventTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Event Title"
        android:paddingRight="12dp"
        android:paddingLeft="12dp"
        android:textSize="18sp" />

    <AutoCompleteTextView
        android:id="@+id/eventLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="12dp"
        android:paddingLeft="12dp"
        android:hint="Location"
        android:textSize="18sp"
        android:completionThreshold="3"/>


    <EditText
        android:id="@+id/eventDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Event Description"
        android:paddingRight="12dp"
        android:paddingLeft="12dp"
        android:textSize="18sp"
        android:inputType="textMultiLine"
        android:gravity="top"
        android:minLines="3"
        android:maxLines="5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/startDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Start Date (e.g., DD/MM/YYYY)"
            android:inputType="date"
            android:paddingRight="12dp"
            android:paddingLeft="12dp"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/endDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:hint="End Date (e.g., DD/MM/YYYY)"
            android:inputType="date"
            android:paddingRight="12dp"
            android:paddingLeft="12dp"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Please use 24-hour time format"
        android:gravity="center_horizontal"
        android:paddingRight="12dp"
        android:paddingLeft="12dp"
        android:textSize="16sp"
        android:layout_marginTop="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/startTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Start Time (e.g., HH:MM)"
            android:inputType="time"
            android:paddingRight="12dp"
            android:paddingLeft="12dp"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/endTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:hint="End Time (e.g., HH:MM)"
            android:inputType="time"
            android:paddingRight="12dp"
            android:paddingLeft="12dp"
            android:textSize="12sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/maxAttendees"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Maximum Attendees (Optional)"
        android:inputType="number"
        android:paddingRight="12dp"
        android:paddingLeft="12dp"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="8dp">
        <Button
            android:id="@+id/btnUseExistingQr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_dark"
            android:text="Use existing QR code"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btnGenerateQr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_dark"
            android:text="Create Event"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="118dp"
        android:layout_height="35dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/rounded_button_dark"
        android:text="Cancel"
        android:textColor="#FFFFFF"
        android:textSize="12sp" />

</LinearLayout>
