...
        android:background="#10283B "
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <Button
            android:id="@+id/btnProfileSettings"
            style="@style/AppRoundedButton"
            android:text="Profile Settings" />


        <Switch
            android:id="@+id/switchGeoTracking"
            style="@style/AppRoundedSwitch"
            android:text="Toggle Geolocation Tracking" />

        <Button
            android:id="@+id/btnExitToMainMenu"
            style="@style/AppRoundedButton"
            android:text="Exit To Main Menu" />

    </LinearLayout>
</RelativeLayout>

